// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background 不同 type 1`] = `
.c0 {
  background-color: rgba(255,255,255,1);
  color: rgba(102,102,102,1);
}

.c1 {
  background-color: rgba(250,250,250,1);
  color: rgba(102,102,102,1);
}

.c2 {
  background-color: rgba(238,238,238,1);
  color: rgba(102,102,102,1);
}

.c3 {
  background-color: rgba(0,0,0,1);
  color: #FFF;
}

<div>
  <div
    className="c0"
  >
    背景模式：global
  </div>
  <div
    className="c0"
  >
    背景模式：higher
  </div>
  <div
    className="c0"
  >
    背景模式：block
  </div>
  <div
    className="c0"
  >
    背景模式：selectedBlock
  </div>
  <div
    className="c1"
  >
    背景模式：disabled
  </div>
  <div
    className="c2"
  >
    背景模式：divider
  </div>
  <div
    className="c3"
  >
    背景模式：mask
  </div>
</div>
`;

exports[`Background 正常情况 1`] = `
.c0 {
  background-color: rgba(255,255,255,1);
  color: rgba(102,102,102,1);
}

<div
  className="c0"
/>
`;

exports[`Background 设置 display 1`] = `
.c0 {
  display: inline-block;
  background-color: rgba(255,255,255,1);
  color: rgba(102,102,102,1);
}

<div
  className="c0"
/>
`;

exports[`Background 设置宽高 1`] = `
.c0 {
  background-color: rgba(255,255,255,1);
  color: rgba(102,102,102,1);
  width: 100px;
  height: 100px;
}

<div
  className="c0"
/>
`;

exports[`Background 设置颜色 1`] = `
.c0 {
  background-color: #000;
  color: #FFF;
}

<div
  className="c0"
/>
`;
